# rlm

./: README.md  pyproject.toml
examples/: kubernetes_repl_example.py
k8s/coordinator/: coordinator.py
k8s/crd/: rlmjob-crd.yaml
k8s/examples/: rlmjob-example.yaml
k8s/images/: Dockerfile.rlm
k8s/metacontroller/: composite-controller.yaml  namespace.yaml
k8s/sync-hook/: Dockerfile  deployment.yaml  sync_hook.py
rlm/clients/: openai.py
rlm/core/: rlm.py  types.py
rlm/environments/: __init__.py  kubernetes_repl.py  local_repl.py
tests/: test_kubernetes_repl.py
